[#28 status: Fixed] Using String[] form in command line